--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.7"
-  }
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
+    "uuidv4": "^6.2.8"
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Wilsonmfreire/PetShopDH.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Wilsonmfreire/PetShopDH/issues"
+  },
+  "homepage": "https://github.com/Wilsonmfreire/PetShopDH#readme",
+  "description": ""
 }
